--- a/app/src/main/res/layout/item_money_layout.xml
+++ b/app/src/main/res/layout/item_money_layout.xml
@@ -42,11 +42,11 @@
 
         </LinearLayout>
 
-        <View
-            android:layout_width="2dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="8dp"
-            android:background="@color/material_dynamic_neutral40" />
+<!--        <View-->
+<!--            android:layout_width="2dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:background="@color/material_dynamic_neutral40" />-->
 
         <LinearLayout
             android:layout_width="wrap_content"
