--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".screens.start.StartFragment">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:text="Start Fragment" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcViewStart"
         android:layout_width="match_parent"
