--- a/app/src/main/res/layout/fragment_root.xml
+++ b/app/src/main/res/layout/fragment_root.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".screens.root.RootFragment">
 
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -15,6 +15,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 
 
     <com.google.android.material.tabs.TabLayout
