Continuation of the lesson

--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".screens.second.SecondFragment"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Second_Screen"
+        android:gravity="right"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcViewSecond"
