--- a/app/src/main/res/layout/item_money_layout.xml
+++ b/app/src/main/res/layout/item_money_layout.xml
@@ -24,7 +24,7 @@
                 android:textColor="@color/blue" />
 
             <TextView
-                android:id="@+id/item_tv_buy"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -32,7 +32,6 @@
                 android:textColor="@color/green" />
 
             <TextView
-                android:id="@+id/item_tv_sale"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -45,8 +44,7 @@
         <View
             android:layout_width="2dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="8dp"
-            android:background="@color/material_dynamic_neutral40" />
+            android:layout_marginStart="8dp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -61,12 +59,15 @@
                 android:textStyle="bold"/>
 
             <TextView
+                android:id="@+id/item_tv_buy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="120" />
 
             <TextView
+
+                android:id="@+id/item_tv_sale"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
