--- a/app/src/main/res/layout/item_money_layout.xml
+++ b/app/src/main/res/layout/item_money_layout.xml
@@ -46,7 +46,7 @@
             android:layout_width="2dp"
             android:layout_height="match_parent"
             android:layout_marginStart="8dp"
-            android:background="@color/material_dynamic_neutral40" />
+            android:background="@color/black" />
 
         <LinearLayout
             android:layout_width="wrap_content"
