--- a/app/src/main/res/navigation/nav_graf.xml
+++ b/app/src/main/res/navigation/nav_graf.xml
@@ -3,13 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graf"
-    app:startDestination="@id/splashFragment">
+    app:startDestination="@id/rootFragment">
 
     <fragment
         android:id="@+id/splashFragment"
         android:name="com.example.retrofit2.screens.splash.SplashFragment"
         android:label="fragment_splash"
-        tools:layout="@layout/fragment_splash" />
+        tools:layout="@layout/fragment_splash" >
+        <action
+            android:id="@+id/action_splashFragment_to_rootFragment"
+            app:destination="@id/rootFragment" />
+    </fragment>
     <fragment
         android:id="@+id/secondFragment"
         android:name="com.example.retrofit2.screens.second.SecondFragment"
@@ -20,4 +24,9 @@
         android:name="com.example.retrofit2.screens.start.StartFragment"
         android:label="fragment_start"
         tools:layout="@layout/fragment_start" />
+    <fragment
+        android:id="@+id/rootFragment"
+        android:name="com.example.retrofit2.screens.root.RootFragment"
+        android:label="fragment_root"
+        tools:layout="@layout/fragment_root" />
 </navigation>
